--- a/src/app/pages/user-management/retailer/index/retailer-index.component.html
+++ b/src/app/pages/user-management/retailer/index/retailer-index.component.html
@@ -153,7 +153,7 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <<<<<<< HEAD=======<ngx-datatable-column [width]="120" name="Akses Kasir" prop="cashier">
+        <ngx-datatable-column [width]="120" name="Akses Kasir" prop="cashier">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p class="status text-truncate h6 p-4 status-order"
@@ -162,17 +162,15 @@
               </p>
             </div>
           </ng-template>
-          </ngx-datatable-column>
-
-          >>>>>>> 4a63be3... CDE-1071 Flagging Active Cashier
-          <!-- <ngx-datatable-column name="Terkahir Masuk" prop="last_login">
+        </ngx-datatable-column>
+        <!-- <ngx-datatable-column name="Terkahir Masuk" prop="last_login">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
               {{row.last_login | date:'dd/MM/yyyy HH:mm'}}
             </ng-template>
           </ngx-datatable-column> -->
 
-          <!-- disable delete ws -->
-          <!-- <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+        <!-- disable delete ws -->
+        <!-- <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
             <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
               <div class="button-row pl-8">
                 <button mat-icon-button color="primary" (click)="deleteWholesaler(row.id)">
@@ -181,19 +179,19 @@
               </div>
             </ng-template>
           </ngx-datatable-column> -->
-          <ngx-datatable-column [width]="60" name="Tindakan" headerClass="textright" [sortable]="false">
-            <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
-              style="justify-content: center !important">
-              <div class="button-row pl-8">
-                <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
-                  <mat-icon class="secondary-text">assignment</mat-icon>
-                </button>
-                <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
-                  <mat-icon class="secondary-text">edit</mat-icon>
-                </button>
-              </div>
-            </ng-template>
-          </ngx-datatable-column>
+        <ngx-datatable-column [width]="60" name="Tindakan" headerClass="textright" [sortable]="false">
+          <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
+            style="justify-content: center !important">
+            <div class="button-row pl-8">
+              <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
+                <mat-icon class="secondary-text">assignment</mat-icon>
+              </button>
+              <button mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+                <mat-icon class="secondary-text">edit</mat-icon>
+              </button>
+            </div>
+          </ng-template>
+        </ngx-datatable-column>
       </ngx-datatable>
     </div>
   </div>
